--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scraping Sample\n",
+    "# Covid19 Report\n",
     "[参考](http://ken-hayashi.com/%E3%80%90python%E5%85%A5%E9%96%80%E3%80%91%E3%82%B9%E3%82%AF%E3%83%AC%E3%82%A4%E3%83%94%E3%83%B3%E3%82%B0%E3%81%A7%E8%A4%87%E6%95%B0%E3%81%AEpdf%E3%83%87%E3%83%BC%E3%82%BF%E3%82%92%E3%83%80%E3%82%A6)\n",
     "## technique\n",
     "- BeautifulSoupを使ってscraping\n",
@@ -45,7 +45,11 @@
     "# csv 整形\n",
     "import csv\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(‘./module/util’)\n",
+    "# import \n"
    ]
   },
   {
