forecast時にノイズのせないように修正

--- a/Parameter Estimation by EnKF.ipynb
+++ b/Parameter Estimation by EnKF.ipynb
@@ -99,6 +99,7 @@
    "source": [
     "# (x, mu)\n",
     "# x = x0*exp(mu*t)を仮定\n",
+    "# todo: 初期値x0も推定する．\n",
     "\n",
     "# モデル誤差\n",
     "q = 1e-5\n",
@@ -114,7 +115,7 @@
     "R = r*np.identity(1)\n",
     "\n",
     "# 状態遷移\n",
-    "M = lambda x, dt : np.array([x[0]*(1+x[1]), x[1]])\n",
+    "M = lambda x, dt : np.array([x[0]*(1+x[1]*dt), x[1]])\n",
     "Q = q*np.identity(2)"
    ]
   },
@@ -131,7 +132,7 @@
     "    P_0 = 1e6*np.identity(2)\n",
     "\n",
     "#     推定\n",
-    "    enkf = EnKalmanFilter(M, H, Q, R, y, x_0, P_0, m=10, dt=1)\n",
+    "    enkf = EnKalmanFilter(M, H, Q, R, y, x_0, P_0, N=10, dt=1)\n",
     "    enkf.forwardEstimation(verbose=False)\n",
     "\n",
     "    enkf.additional_forecast(additional_days)\n",
